First commited as before_102396_rev1